# distributed-blog

./: .gitignore  Cargo.toml  README.md
admin-srv/: Cargo.toml
admin-srv/src/: main.rs  server.rs
admin-srv/tests/: admin_srv_test.rs
blog-auth/: Cargo.toml
blog-auth/src/: err.rs  lib.rs
blog-backend/: Cargo.toml
blog-backend/src/: main.rs  model.rs
blog-backend/src/form/: auth.rs  cate.rs  filter.rs  mod.rs
blog-backend/src/handler/: auth.rs  cate.rs  cookie.rs  mod.rs
blog-backend/src/middleware/: auth.rs  mod.rs
blog-backend/templates/: login.html
blog-backend/templates/cate/: add.html  index.html
blog-frontend/: Cargo.toml
blog-frontend/src/: handler.rs  main.rs  model.rs
blog-frontend/templates/: detail.html  index.html
blog-proto/: Cargo.toml  build.rs
blog-proto/proto/: admin.proto  category.proto  topic.proto
blog-proto/src/: pb.rs
blog-types/: Cargo.toml
blog-types/src/: lib.rs
blog-utils/: Cargo.toml
blog-utils/src/: password.rs
category-srv/: Cargo.toml
category-srv/src/: main.rs  server.rs
category-srv/tests/: category_srv_test.rs
proto/: category.proto  topic.proto
scripts/: blog.sql
topic-srv/: Cargo.toml
topic-srv/src/: main.rs  server.rs
topic-srv/tests/: topic_srv_test.rs
