[package]
name = "blog-backend"
version = "0.1.0"
edition = "2021"
authors = ["axum.rs <team@axum.rs>"]
license = "MIT"
repository = "https://github.com/AxumCourse/distributed-blog"
homepage = "https://axum.rs"
description = "axum.rs专题：使用axum和gRPC构建分布式blog"

[dependencies]
tokio = {version = "1", features = ["full"]}
prost = "0.11"
prost-types = "0.11"
tonic = "0.8"
axum = "0.5"
tera = "1"
serde = { version="1", features = ["derive"] }
chrono = "0.4"
blog-proto = {path="../blog-proto"}
blog-types = {path="../blog-types"}
blog-utils = {path="../blog-utils"}
blog-auth = {path="../blog-auth"}